hdpmi: fixed bug in ResizeLDT(), where hiword(ecx) may become != 0

--- a/Src/DOSXXX/MAKEFILE
+++ b/Src/DOSXXX/MAKEFILE
@@ -2,12 +2,12 @@
 !include <..\dirs>
 
 ALL:
-	$(MAKE) -s -f DOSXXX.MAK
-	$(MAKE) -s -f DOSCALLS.MAK
-	$(MAKE) -s -f NLS.MAK
-	$(MAKE) -s -f VIOCALLS.MAK
-	$(MAKE) -s -f KBDCALLS.MAK
-#	$(MAKE) -s -f MOUCALLS.MAK
+	@$(MAKE) -s -f DOSXXX.MAK
+	@$(MAKE) -s -f DOSCALLS.MAK
+	@$(MAKE) -s -f NLS.MAK
+	@$(MAKE) -s -f VIOCALLS.MAK
+	@$(MAKE) -s -f KBDCALLS.MAK
+#	@$(MAKE) -s -f MOUCALLS.MAK
 
 clean:
 	$(MAKE) -s -f DOSXXX.MAK    clean
