--- a/Src/OWSUPP/MAKEFILE
+++ b/Src/OWSUPP/MAKEFILE
@@ -1,7 +1,10 @@
 
 # enter: nmake 
-# this assembles the cstrt386 versions for HX (PE and MZ)
+# this assembles the cstrt386 versions for HX (PE)
 # the object modules should then be copied to \WATCOM\LIB386\DOS
+
+# there are 2 versions created, one with suffix X, the other with suffix R
+# it's a complete mess...!
 
 !include <..\dirs>
 
