--- a/SrcEmu/NTLFNHLP/MAKEFILE
+++ b/SrcEmu/NTLFNHLP/MAKEFILE
@@ -66,7 +66,7 @@ $(OUTDIR)\$(NAME).obj $(LOPTS) $(OUTDIR)\$(LIBNAME).lib $(LIBS)
 /DEF:$(NAME).DEF /SECTION:.text,ERW /MERGE:.rdata=.text /MERGE:.data=.text /OUT:$*.DLL
 <<
 !else
-	@$(LINKBIN) format win pe dll f $(OUTDIR)\$(NAME).obj lib {$(OUTDIR)\$(LIBNAME).lib $(LIBS)} op q, map=$*, implib=$*
+	@$(LINKBIN) format win pe dll f $(OUTDIR)\$(NAME).obj n $*.DLL lib {$(OUTDIR)\$(LIBNAME).lib $(LIBS)} op q, map=$*, implib=$*
 !endif
 
 WLIBMODS=$(SRCMODS:.\=+) 
