hdpmi: int 31h,ax=0b00h - support i/o watchpoints

--- a/Src/DOSX/Makefile
+++ b/Src/DOSX/Makefile
@@ -10,15 +10,15 @@ OUTDIR=RELEASE
 
 AOPTS= -mz -c -nologo -Fo$* -Fl$* -Sg
 
-LOPTS=$(XLOPTS)/ONE:NOE/NOE/MAP:FULL/NON/FAR/STACK:2048
+#LOPTS=$(XLOPTS)/ONE:NOE/NOE/MAP:FULL/NON/FAR/STACK:2048
 
-ALL: $(OUTDIR) $(OUTDIR)\dosx.exe
+ALL: $(OUTDIR) $(OUTDIR)\DOSX.EXE
 
 $(OUTDIR):
 	@mkdir $(OUTDIR)
 
-$(OUTDIR)\dosx.exe: dosx.asm makefile
-	@$(ASM) $(AOPTS) dosx.asm
+$(OUTDIR)\DOSX.EXE: DOSX.ASM Makefile
+	@$(ASM) $(AOPTS) DOSX.ASM
 
 clean:
 	@if exist $(OUTDIR)\dosx.exe del $(OUTDIR)\dosx.exe
