fixed regression fix in v3.22: int 25h/26h in v3.22 didn't work if cx != -1

--- a/Src/DOSX/Makefile
+++ b/Src/DOSX/Makefile
@@ -12,7 +12,7 @@ AOPTS= -mz -c -nologo -Fo$* -Fl$* -Sg
 
 #LOPTS=$(XLOPTS)/ONE:NOE/NOE/MAP:FULL/NON/FAR/STACK:2048
 
-ALL: $(OUTDIR) $(OUTDIR)\DOSX.EXE
+ALL: $(OUTDIR) $(OUTDIR)\DOSX.EXE $(OUTDIR)\WIN386.EXE
 
 $(OUTDIR):
 	@mkdir $(OUTDIR)
@@ -20,5 +20,9 @@ $(OUTDIR):
 $(OUTDIR)\DOSX.EXE: DOSX.ASM Makefile
 	@$(ASM) $(AOPTS) DOSX.ASM
 
+$(OUTDIR)\WIN386.EXE: DOSX.ASM Makefile
+	@$(ASM) $(AOPTS) -DENHANCED=1 DOSX.ASM
+
 clean:
 	@if exist $(OUTDIR)\dosx.exe del $(OUTDIR)\dosx.exe
+	@if exist $(OUTDIR)\win386.exe del $(OUTDIR)\win386.exe
